--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "'C:\\\\Users\\\\Prathamesh\\\\Downloads\\\\Text-Summarizer\\\\Text-Summarizer-Project'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "'C:\\\\Users\\\\Prathamesh\\\\Downloads\\\\Text-Summarizer\\\\Text-Summarizer-Project'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,30 +96,32 @@
     "        self,\n",
     "        config_filepath = CONFIG_FILE_PATH,\n",
     "        params_filepath = PARAMS_FILE_PATH):\n",
-    "        \n",
+    "\n",
     "        self.config = read_yaml(config_filepath)\n",
     "        self.params = read_yaml(params_filepath)\n",
-    "        \n",
+    "\n",
     "        create_directories([self.config.artifacts_root])\n",
-    "        \n",
+    "\n",
+    "    \n",
+    "\n",
     "    def get_data_ingestion_config(self) -> DataIngestionConfig:\n",
     "        config = self.config.data_ingestion\n",
-    "        \n",
+    "\n",
     "        create_directories([config.root_dir])\n",
-    "        \n",
+    "\n",
     "        data_ingestion_config = DataIngestionConfig(\n",
     "            root_dir=config.root_dir,\n",
-    "            source_URL = config.source_URL,\n",
-    "            local_data_file = config.local_data_file,\n",
-    "            unzip_dir = config.unzip_dir\n",
-    "        )     \n",
-    "        \n",
+    "            source_URL=config.source_URL,\n",
+    "            local_data_file=config.local_data_file,\n",
+    "            unzip_dir=config.unzip_dir \n",
+    "        )\n",
+    "\n",
     "        return data_ingestion_config"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,25 +134,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "class DataIngestion:\n",
     "    def __init__(self, config: DataIngestionConfig):\n",
     "        self.config = config\n",
-    "        \n",
+    "\n",
+    "\n",
+    "    \n",
     "    def download_file(self):\n",
     "        if not os.path.exists(self.config.local_data_file):\n",
     "            filename, headers = request.urlretrieve(\n",
     "                url = self.config.source_URL,\n",
     "                filename = self.config.local_data_file\n",
     "            )\n",
-    "            logger.info(f\"{filename} download the following info: \\n{headers}\")\n",
+    "            logger.info(f\"{filename} download! with following info: \\n{headers}\")\n",
     "        else:\n",
-    "            logger.info(f\" file already exists of size: {get_size(Path(self.config.local_data_file))}\")\n",
-    "                \n",
-    "                \n",
+    "            logger.info(f\"File already exists of size: {get_size(Path(self.config.local_data_file))}\")  \n",
+    "\n",
+    "        \n",
+    "    \n",
     "    def extract_zip_file(self):\n",
     "        \"\"\"\n",
     "        zip_file_path: str\n",
@@ -165,33 +170,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-12-29 12:29:28,339: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-12-29 12:29:28,342: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-12-29 12:29:28,344: INFO: common: created directory at: artifacts]\n",
-      "[2023-12-29 12:29:28,346: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2023-12-29 12:29:28,348: INFO: 1226816786:  file already exists of size: ~ 132 KB]\n"
-     ]
-    },
-    {
-     "ename": "BadZipFile",
-     "evalue": "File is not a zip file",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mBadZipFile\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[67], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m     data_ingestion\u001b[38;5;241m.\u001b[39mextract_zip_file()\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m----> 8\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
-      "Cell \u001b[1;32mIn[67], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m     data_ingestion \u001b[38;5;241m=\u001b[39m DataIngestion(config\u001b[38;5;241m=\u001b[39mdata_ingestion_config)\n\u001b[0;32m      5\u001b[0m     data_ingestion\u001b[38;5;241m.\u001b[39mdownload_file()\n\u001b[1;32m----> 6\u001b[0m     \u001b[43mdata_ingestion\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mextract_zip_file\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m      8\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
-      "Cell \u001b[1;32mIn[51], line 24\u001b[0m, in \u001b[0;36mDataIngestion.extract_zip_file\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     22\u001b[0m unzip_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig\u001b[38;5;241m.\u001b[39munzip_dir\n\u001b[0;32m     23\u001b[0m os\u001b[38;5;241m.\u001b[39mmakedirs(unzip_path, exist_ok\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m---> 24\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[43mzipfile\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mZipFile\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconfig\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlocal_data_file\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m zip_ref:\n\u001b[0;32m     25\u001b[0m     zip_ref\u001b[38;5;241m.\u001b[39mextractall(unzip_path)\n",
-      "File \u001b[1;32mc:\\Users\\Prathamesh\\anaconda3\\envs\\textenv\\Lib\\zipfile.py:1302\u001b[0m, in \u001b[0;36mZipFile.__init__\u001b[1;34m(self, file, mode, compression, allowZip64, compresslevel, strict_timestamps, metadata_encoding)\u001b[0m\n\u001b[0;32m   1300\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m   1301\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m mode \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m-> 1302\u001b[0m         \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_RealGetContents\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1303\u001b[0m     \u001b[38;5;28;01melif\u001b[39;00m mode \u001b[38;5;129;01min\u001b[39;00m (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mx\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[0;32m   1304\u001b[0m         \u001b[38;5;66;03m# set the modified flag so central directory gets written\u001b[39;00m\n\u001b[0;32m   1305\u001b[0m         \u001b[38;5;66;03m# even if no files are added to the archive\u001b[39;00m\n\u001b[0;32m   1306\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_didModify \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\Prathamesh\\anaconda3\\envs\\textenv\\Lib\\zipfile.py:1369\u001b[0m, in \u001b[0;36mZipFile._RealGetContents\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1367\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m BadZipFile(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFile is not a zip file\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m   1368\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m endrec:\n\u001b[1;32m-> 1369\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m BadZipFile(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFile is not a zip file\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m   1370\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdebug \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   1371\u001b[0m     \u001b[38;5;28mprint\u001b[39m(endrec)\n",
-      "\u001b[1;31mBadZipFile\u001b[0m: File is not a zip file"
+      "[2023-12-31 12:30:22,501: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2023-12-31 12:30:22,506: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2023-12-31 12:30:22,508: INFO: common: created directory at: artifacts]\n",
+      "[2023-12-31 12:30:22,509: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2023-12-31 12:30:25,960: INFO: 1434958058: artifacts/data_ingestion/data.zip download! with following info: \n",
+      "Connection: close\n",
+      "Content-Length: 7903594\n",
+      "Cache-Control: max-age=300\n",
+      "Content-Security-Policy: default-src 'none'; style-src 'unsafe-inline'; sandbox\n",
+      "Content-Type: application/zip\n",
+      "ETag: \"dbc016a060da18070593b83afff580c9b300f0b6ea4147a7988433e04df246ca\"\n",
+      "Strict-Transport-Security: max-age=31536000\n",
+      "X-Content-Type-Options: nosniff\n",
+      "X-Frame-Options: deny\n",
+      "X-XSS-Protection: 1; mode=block\n",
+      "X-GitHub-Request-Id: A3A0:3E972F:FDC45:1CFFC6:65911015\n",
+      "Accept-Ranges: bytes\n",
+      "Date: Sun, 31 Dec 2023 07:00:24 GMT\n",
+      "Via: 1.1 varnish\n",
+      "X-Served-By: cache-del21730-DEL\n",
+      "X-Cache: HIT\n",
+      "X-Cache-Hits: 0\n",
+      "X-Timer: S1704006024.303960,VS0,VE295\n",
+      "Vary: Authorization,Accept-Encoding,Origin\n",
+      "Access-Control-Allow-Origin: *\n",
+      "Cross-Origin-Resource-Policy: cross-origin\n",
+      "X-Fastly-Request-ID: 26427c6506eef9793946c077f251ae096131978c\n",
+      "Expires: Sun, 31 Dec 2023 07:05:24 GMT\n",
+      "Source-Age: 0\n",
+      "\n",
+      "]\n"
      ]
     }
    ],
